@@ -18,7 +18,7 @@
 ;(debug-enable 'debug)
 ;(debug-enable 'backtrace)
 ;(read-enable 'positions)
-;(set-debug-cell-accesses! #f)
+;(set-debug-cell-accesses! 15000)
 
 
 
